--- a/src/main/resources/templates/index1.html
+++ b/src/main/resources/templates/index1.html
@@ -1,4 +1,4 @@
-<html lang="en"><head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"><head>
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
@@ -31,7 +31,7 @@
 
 <div class="container" role="main">
   <p>SQUIRE is a Web service that analyses new linked datasets to recommend SPARQL queries similar to those you already use for your dataset.</p>
-  <form class="form" id="mainform">
+  <form class="form" id="mainform" action="#" th:action="@{/submit}" th:object="${queryModel}" method="post">
     <div class="form-group">
       <ul class="nav nav-tabs">
         <label>Source Dataset</label>
@@ -43,7 +43,7 @@
         <div class="tab-pane active" id="tab1">
           <div class="input-group">
             <span class="input-group-addon" id="basic-addonmodif">URL</span>
-            <input type="text" placeholder="Endpoint of the dataset you can already query" class="form-control" name="src_sparql" value="http://data.open.ac.uk/query" aria-describedby="basic-addon3"/>
+            <input type="text" placeholder="Endpoint of the dataset you can already query" class="form-control" name="src_sparql" value="http://data.open.ac.uk/query" aria-describedby="basic-addon3"  th:field="*{src_sparql}" />
           </div>
         </div>
         <div class="tab-pane" id="tab2">
@@ -54,7 +54,7 @@
 
     <div class="form-group">
       <label>Source Query</label>
-      <textarea class="form-control" name="qo" placeholder="Enter a SPARQL query that works for the source data..." style="width: 100%; height: 150px;"></textarea>
+      <textarea class="form-control" name="qo"  placeholder="Enter a SPARQL query that works for the source data..." style="width: 100%; height: 150px;" th:field="*{q0}"></textarea>
     </div>
 
     <div class="form-group">
@@ -91,7 +91,7 @@
         <div class="tab-pane active" id="tab3">
           <div class="input-group">
             <span class="input-group-addon" id="basic-addon3">URL</span>
-            <input type="text" placeholder="Endpoint of the dataset you want to discover how to query" class="form-control" name="tgt_sparql" value="https://data.ox.ac.uk/sparql/" aria-describedby="basic-addon3"/>
+            <input type="text" placeholder="Endpoint of the dataset you want to discover how to query" class="form-control" name="tgt_sparql" value="https://data.ox.ac.uk/sparql/" aria-describedby="basic-addon3" th:field="*{tgt_sparql}"/>
           </div>
         </div>
         <div class="tab-pane" id="tab4">
