access remote endpoint and get result successfully

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="pesto-navbar-right">
         <span class="sr-only">Toggle navigation</span>
       </button>
-      <a class="navbar-brand" href="#"><img src="gfx/sqrtLogo.png" style="display:inline; max-height:32px"> <b>SQUIRE</b> - SPARQL Query Recommendation Tool</a>
+      <a class="navbar-brand" href="#"><img src="css/sqrtLogo.png" style="display:inline; max-height:32px"> <b>SQUIRE</b> - SPARQL Query Recommendation Tool</a>
     </div>
   </div>
 
